Kibana screenshot added

--- a/document.conf
+++ b/document.conf
@@ -16,6 +16,9 @@ filter {
       "price" => "integer"
     }
   }
+  date {
+    match => [ "date", "yyyy/MM/dd HH:mm:ss" ]
+  }
 }
 output {
   elasticsearch {
